--- a/src/Syslog.Framework.Logging/project.json
+++ b/src/Syslog.Framework.Logging/project.json
@@ -1,22 +1,29 @@
 {
-  "version": "1.0.0-rc1-final-*",
+  "version": "1.0.0-rc2-final-*",
   "description": "ASP.NET 5 logging framework provider that enables an application to send log messages to a syslog server.",
   "authors": [ "mguinness" ],
-  "tags": [ "syslog dnx" ],
-  "projectUrl": "https://github.com/mguinness/syslog-framework-logging",
-  "licenseUrl": "https://github.com/mguinness/syslog-framework-logging/blob/master/LICENSE",
+  "packOptions": {
+    "tags": [ "syslog", "dnx" ],
+    "projectUrl": "https://github.com/mguinness/syslog-framework-logging",
+    "licenseUrl": "https://raw.githubusercontent.com/mguinness/syslog-framework-logging/master/LICENSE"
+  },
   "frameworks": {
-    "dnx451": { },
-    "dnxcore50": {
+    "net452": { },
+    "netcoreapp1.0": {
+      "imports": [
+        "dotnet5.6",
+        "dnxcore50",
+        "portable-net45+win8"
+      ],
       "dependencies": {
-        "System.Net.Sockets": "4.0.10-beta-23109",
-        "System.Net.Primitives": "4.0.10-beta-23109",
-        "System.Text.Encoding": "4.0.10-beta-23109"
+        "System.Net.Sockets": "4.1.0-rc2-24027",
+        "System.Net.Primitives": "4.0.11-rc2-24027",
+        "System.Text.Encoding": "4.0.11-rc2-24027"
       }
     }
   },
   "dependencies": {
-    "Microsoft.Extensions.Configuration.Binder": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc1-final"
+    "Microsoft.Extensions.Configuration.Binder": "1.0.0-rc2-final",
+    "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc2-final"
   }
 }
