--- a/src/Syslog.Framework.Logging/project.json
+++ b/src/Syslog.Framework.Logging/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rc2-final-*",
+  "version": "1.0.0",
   "description": "ASP.NET 5 logging framework provider that enables an application to send log messages to a syslog server.",
   "authors": [ "mguinness" ],
   "packOptions": {
@@ -9,21 +9,22 @@
   },
   "frameworks": {
     "net452": { },
-    "netcoreapp1.0": {
+    "netstandard1.3": {
       "imports": [
         "dotnet5.6",
         "dnxcore50",
         "portable-net45+win8"
       ],
       "dependencies": {
-        "System.Net.Sockets": "4.1.0-rc2-24027",
-        "System.Net.Primitives": "4.0.11-rc2-24027",
-        "System.Text.Encoding": "4.0.11-rc2-24027"
+        "System.Net.Sockets": "4.1.0",
+        "System.Net.Primitives": "4.0.11",
+        "System.Text.Encoding": "4.0.11"
       }
     }
   },
-  "dependencies": {
-    "Microsoft.Extensions.Configuration.Binder": "1.0.0-rc2-final",
-    "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc2-final"
-  }
+    "dependencies": {
+        "Microsoft.Extensions.Configuration.Binder": "1.0.0",
+        "Microsoft.Extensions.Logging.Abstractions": "1.0.0",
+        "NETStandard.Library": "1.6.0"
+    }
 }
